--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
+<!-- Hi Ellen! :D -->
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -18,18 +19,30 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <header>
-            <ul>
-                <li>chirpus inc.</li>
-                <a href="#"><li>Work</li></a>
-                <a href="#"><li>About Us</li></a>
-                <a href="#"><li>Contact</li></a>
+            <div class="text-logo">chirpus inc.</></div>
+            <nav>
+             <ul class="nav-links">
+                 <li><a href="#">Work</a></li>
+                 <li><a href="#">About Us</a></li>
+                 <li><a href="#">Contact</a></li>
             </ul>
+        </nav>
+            <button class="nav-item">Hire Us</button>
         </header>
-        <button>Hire Us</button>
         <h1>chirpus inc.</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Posuere sollicitudin aliquam ultrices sagittis orci a. Placerat duis ultricies lacus sed turpis.</p>
-        <button>Scroll Down</button>
+        <div class="row">
+                <div class="column">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Posuere sollicitudin aliquam ultrices sagittis orci a. Placerat duis ultricies lacus sed turpis.</p>
+                </div>
+                <div class="column"></div>
+                <div class="circles">
+                <span class="circle1"></span>
+                <span class="circle2"></span>
+                <span class="circle3"></span>
+                </div>
+        </div>
+        <a href="#"><button class="scroll">Scroll Down</button></a>
         <script src="" async defer></script>
     </body>
 </html>
